# dombreaker-rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: rust.yml
qml/: Board.qml  BrokenDomino.qml  Domino.qml  DominoBackground.qml  DominoHalf.qml  Dot.qml  main.qml
sixty/: Board.60  Domino.60  DominoBackground.60  Main.60  Models.60
src/: board.rs  domino.rs  game.rs  main.rs  qt_ui.rs  sixty_ui.rs
src/board/: generator.rs
src/game/: board.rs  domino.rs
src/game/board/: generator.rs
src/qt_ui/: model.rs  qml.rs
src/sixty_ui/: model.rs
